--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
     <title lang="en">Web Studio</title>
 </head>
 
@@ -22,7 +22,7 @@
         <!--Основна навігація-->
         <div class="container navcont">
         <nav class="navbox">
-            <a href="./index.html" lang="en" class="navbox__logo">Web<span class="navbox__logo--head-сolor">Studio</span></a>
+            <a href="./index.html" lang="en" class="logo">Web<span class="logo__text--head-сolor">Studio</span></a>
 
             <ul class="site-nav">
                 <li class="site-nav__item"><a href="./index.html" class="site-nav__link--current">Студія</a></li>
@@ -32,7 +32,7 @@
         </nav>
         <!--Активні контакти-->
         <ul class="site-auth">
-            <li class="site-auth__item"><a href="mailo:info@devstudio.com" class="site-auth__link">
+            <li class="site-auth__item"><a href="mailto:info@devstudio.com" class="site-auth__link">
                 <svg width="16px" height="12px" class="site-auth__icon-envelope">
                     <use href="./images/icons.svg#envelope";></use>
                 </svg>
@@ -59,8 +59,8 @@
         <section class="section--padding-off">
             <div class="container">
                 <h2 class="title-primary--visually-hidden">Особливості</h2>
-                <ul class="card-set--primary--list">
-                    <li class="card-set__item--primary specialty">
+                <ul class="card-set--primary">
+                    <li class="card-set--primary__item">
                         <div class="specbox-icon">
                             <svg width="70px" height="70px" class="icon-antenna">
                                 <use href="./images/icons.svg#antenna";></use>
@@ -73,7 +73,7 @@
                         </p>
                     </li>
  
-                    <li class="card-set__item--primary specialty">
+                    <li class="card-set--primary__item">
                         <div class="specbox-icon">
                             <svg width="70px" height="70px" class="icon-clock">
                                 <use href="./images/icons.svg#clock";></use>
@@ -86,7 +86,7 @@
                         </p>
                     </li>
 
-                    <li class="card-set__item--primary specialty">
+                    <li class="card-set--primary__item">
                         <div class="specbox-icon">
                             <svg width="70px" height="70px" class="icon-diagram">
                                 <use href="./images/icons.svg#diagram";></use>
@@ -98,7 +98,7 @@
                         </p>
                     </li>
 
-                    <li class="card-set__item--primary specialty">
+                    <li class="card-set--primary__item">
                         <div class="specbox-icon">
                             <svg width="70px" height="70px" class="icon-astronaut">
                                 <use href="./images/icons.svg#astronaut";></use>
@@ -117,8 +117,8 @@
         <section class="section">
             <div class="container">
                 <h2 class="title-primary">Чим ми займаємося</h2>
-                <ul class="card-set--secondary--list ">
-                <li class="card-set__item--secondary activity">
+                <ul class="card-set--secondary">
+                <li class="card-set--secondary__item">
                     <div class="activity__thumb">
                         <img src="./images/programer.jpg"
                         alt="крупним планом зображення програміста, який працює на робочому столі в офісі" width="370"
@@ -129,7 +129,7 @@
                     </div>
                 </li>
 
-                <li class="img-box__item">
+                <li class="card-set--secondary__item">
                     <div class="activity__thumb">
                         <img src="./images/designers.jpg"
                         alt="дизайнери веб-інтерфейсу розробляють програми для смартфонів, команда творців працює над інтерфейсом мобільних телефонів"
@@ -140,7 +140,7 @@
                     </div>
                 </li>
 
-                <li class="img-box__item">
+                <li class="card-set--secondary__item">
                     <div class="activity__thumb">
                         <img src="./images/artist.jpg"
                         alt="творчий художник веб-дизайн із робочим графічним планшетом із вибором кольорів" width="370"
@@ -158,17 +158,17 @@
         <section class="section--background">
             <div class="container">
                 <h2 class="title-primary">Наша команда</h2>
-                <ul class="card-set--primary--list">
-                    <li class="card-set__item--primary team">
-                        <article class="team__card">
-                            <div class="team__thumb">
+                <ul class="card-set--primary">
+                    <li class="card-set--primary__item">
+                        <article class="team-card">
+                            <div class="team-card__thumb">
                                 <img src="./images/I_demianenko.jpg" alt="Портрет дизайнера продукту" width="270" height="260">
                             </div>
-                            <div class="team__content">
+                            <div class="team-card__content">
                                 <h3 class="team__title">Ігор Дем'яненко</h3>
                                 <p lang="en" class="team__text">Product Designer</p>
                                 <div>
-                                    <ul class="social-networks--list">
+                                    <ul class="social-networks">
                                         <li>
                                             <a href="#" class="social-networks__icon">
                                                 <svg width="20px" height="20px" class="icon">
@@ -203,16 +203,16 @@
                         </article>
                     </li>
 
-                    <li class="card-set__item--primary team">
-                        <article class="team__card">
-                            <div class="team__thumb">
+                    <li class="card-set--primary__item">
+                        <article class="team-card">
+                            <div class="team-card__thumb">
                                 <img src="./images/o_repina.jpg" alt="Портрет розробника інтерфейсу" width="270" height="260">
                             </div>
-                            <div class="team__content">
+                            <div class="team-card__content">
                                 <h3 class="team__title">Ольга Рєпіна</h3>
                                 <p lang="en" class="team__text">Frontend Developer</p>
                                 <div>
-                                    <ul class="social-networks--list">
+                                    <ul class="social-networks">
                                         <li>
                                             <a href="#" class="social-networks__icon">
                                                 <svg width="20px" height="20px" class="icon">
@@ -247,16 +247,16 @@
                         </article>
                     </li>
 
-                    <li class="card-set__item--primary team">
-                        <article class="team__card">
-                            <div class="team__thumb">
+                    <li class="card-set--primary__item">
+                        <article class="team-card">
+                            <div class="team-card__thumb">
                                 <img src="./images/m_tarasov.jpg" alt="Портрет спеціаліста з маркетингу" width="270" height="260">
                             </div>
-                            <div class="team__content">
+                            <div class="team-card__content">
                                 <h3 class="team__title">Микола Тарасов</h3>
                                <p lang="en" class="team__text">Marketing</p>
                                <div>
-                                    <ul class="social-networks--list">
+                                    <ul class="social-networks">
                                         <li>
                                             <a href="#" class="social-networks__icon">
                                                 <svg width="20px" height="20px" class="icon">
@@ -291,16 +291,16 @@
                         </article>
                     </li>
 
-                    <li class="card-set__item--primary team">
-                        <article class="team__card">
-                            <div class="team__thumb">
+                    <li class="card-set--primary__item">
+                        <article class="team-card">
+                            <div class="team-card__thumb">
                                 <img src="./images/m_yermakov.jpg" alt="Портрет дизайнера інтерфейсу користувача" width="270" height="260">
                            </div>
-                            <div class="team__content">
+                            <div class="team-card__content">
                                 <h3 class="team__title">Михайло Єрмаков</h3>
                                 <p lang="en" class="team__text">UI Designer</p>
                                 <div>
-                                    <ul class="social-networks--list">
+                                    <ul class="social-networks">
                                         <li>
                                             <a href="#" class="social-networks__icon">
                                                 <svg width="20px" height="20px" class="icon">
@@ -341,7 +341,7 @@
         <section class="section">
             <div class="container">
             <h2 class="title-primary">Постійні клієнти</h2>
-            <ul class="clientage-set--list">
+            <ul class="clientage-set">
                 <li class="clientage-set__item">
                     <div class="clientage-set__icon">
                         <svg width="41px" height="47px" class="icon">
@@ -390,45 +390,47 @@
     </main>
     <!--Підвал-->
     <footer class="footer">
-        <div class="container--networks">
+        <div class="container networks">
             <div class="footerbox">
-            <a href="./index.html" lang="en" class="footerbox__logo">Web<span class="footerbox__logo--headColor">Studio</span></a>
+            <a href="./index.html" lang="en" class="logo">Web<span class="logo__text--foot-сolor">Studio</span></a>
             <!--Адреса-->
             <address class="address">
                 <ul class="address-link">
                     <li class="address-link__item"><a href="https://goo.gl/maps/tCFka8TkGF5i9ezr7" target="_blank" rel="noopener noreferrer" class="address-link__link">м.
                             Київ, пр-т Лесі Українки, 26</a></li>
-                    <li class="address-link__item"><a href="mailo:info@devstudio.com" class="address__link--mail">info@devstudio.com</a></li>
-                    <li class="address-link__item"><a href="tel:+380961111111" class="address__link--tel">+38 096 111 11 11</a></li>
+
+                    <li class="address-link__item"><a href="mailto:info@devstudio.com" class="address-link__link--mail">info@devstudio.com</a></li>
+
+                    <li class="address-link__item"><a href="tel:+380961111111" class="address-link__link--tel">+38 096 111 11 11</a></li>
                 </ul>
             </address>
             </div>
             <div class="footer__social-net">
                 <h3 class="footer__title">приєднуйтесь</h3>
-                <ul class="social-networks--foot--list">
+                <ul class="social-networks--foot">
                     <li>
-                        <a href="#" class="social-networks__icon--foot">
+                        <a href="#" class="social-networks--foot__icon">
                             <svg width="20px" height="20px" class="icon">
                                 <use href="./images/icons.svg#instagram";></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="social-networks__icon--foot">
+                        <a href="#" class="social-networks--foot__icon">
                             <svg width="20px" height="20px" class="icon">
                                 <use href="./images/icons.svg#twitter";></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="social-networks__icon--foot">
+                        <a href="#" class="social-networks--foot__icon">
                             <svg width="20px" height="20px" class="icon">
                                 <use href="./images/icons.svg#facebook";></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="social-networks__icon--foot">
+                        <a href="#" class="social-networks--foot__icon">
                             <svg width="20px" height="20px" class="icon">
                                 <use href="./images/icons.svg#linkedin";></use>
                             </svg>
@@ -437,13 +439,13 @@
                 </ul>
             </div>
 
-            <div class="form-sign-up">
+            <div class="form__sign-up">
                 <form class="sign-up">
-                    <label class="sing-up__title" for="sign-up-user-email">Підпишіться на розсилку</label>
+                    <label class="sing-up__mail-title" for="sign-up-user-email">Підпишіться на розсилку</label>
 
                     <input class="sing-up__mail" type="email" name="email" id="sign-up-user-email" placeholder="E-mail">
 
-                    <button class="sing-up__btn" type="submit">Підписатися<svg width="24px" height="24px" class="icon">
+                    <button class="sing-up__btn" type="submit">Підписатися<svg width="24px" height="24px" class="sing-up__btn-icon">
                         <use href="./images/modal-icon.svg#send" ;></use>
                     </svg></button>
                 </form>
@@ -458,33 +460,33 @@
                 <svg width="11px" height="11px" class="icon-close"><use href="./images/icon-dagger.svg#dagger"></use></svg>
             </button>
 
-            <form class="form data">
-                    <b class="data__title">Залиште свої дані, ми вам передзвонимо</b>
+            <form class="form-data">
+                    <b class="form-data__title">Залиште свої дані, ми вам передзвонимо</b>
 
-                    <div class="data__box">
-                        <label class="data__label" for="username-data">Ім'я</label>
-                        <input class="data__input" type="name" name="name" id="username-data">
-                        <svg class="data__icon uname" width="12px" height="12px">
+                    <div class="databox">
+                        <label class="databox__label" for="username-data">Ім'я</label>
+                        <input class="databox__input" type="name" name="name" id="username-data">
+                        <svg class="databox__icon uname" width="12px" height="12px">
                             <use href="./images/modal-icon.svg#name"></use>
                         </svg>
                     </div>
-                    <div class="data__box">
-                        <label class="data__label" for="tel-data">Телефон</label>
-                        <input class="data__input" type="tel" name="tel" id="tel-data">
-                        <svg class="data__icon tell" width="13px" height="13px">
+                    <div class="databox">
+                        <label class="databox__label" for="tel-data">Телефон</label>
+                        <input class="databox__input" type="tel" name="tel" id="tel-data">
+                        <svg class="databox__icon tell" width="13px" height="13px">
                             <use href="./images/modal-icon.svg#tel"></use>
                         </svg>
                     </div>
-                    <div class="data__box">
-                        <label class="data__label" for="mail-data">Пошта</label>
-                        <input class="data__input" type="email" name="mail" id="mail-data">
-                        <svg class="data__icon mail" width="15px" height="12px">
+                    <div class="databox">
+                        <label class="databox__label" for="mail-data">Пошта</label>
+                        <input class="databox__input" type="email" name="mail" id="mail-data">
+                        <svg class="databox__icon mail" width="15px" height="12px">
                             <use href="./images/modal-icon.svg#mailo"></use>
                         </svg>
                     </div>
-                    <div class="data__box">
-                        <label class="data__label" for="comment-data">Коментар</label>
-                        <textarea class="data__texterea" name="comment" id="comment-data" placeholder="Введіть текст"></textarea>
+                    <div class="databox">
+                        <label class="databox__label" for="comment-data">Коментар</label>
+                        <textarea class="databox__texterea" name="comment" id="comment-data" placeholder="Введіть текст"></textarea>
                     </div>
                     <div class="check-box">
                         
